# internal/models/film.go
@@ -8,17 +8,17 @@ import (
 )
 
 type Film struct {
-	ID               uuid.UUID `json:"id"`
+	ID               uuid.UUID `json:"id" binding:"required"`
 	Title            string    `json:"title" binding:"required"`
 	OriginalTitle    *string   `json:"original_title,omitempty"`
-	Cover            *string   `json:"cover,omitempty"`
-	Poster           *string   `json:"poster,omitempty"`
+	Cover            string    `json:"cover" binding:"required"`
+	Poster           string    `json:"poster" binding:"required"`
 	GenreID          uuid.UUID `json:"genre_id" binding:"required"`
-	ShortDescription *string   `json:"short_description,omitempty"`
-	Description      *string   `json:"description,omitempty"`
-	AgeCategory      *string   `json:"age_category,omitempty"`
-	Budget           *int      `json:"budget,omitempty"`
-	WorldwideFees    *int      `json:"worldwide_fees,omitempty"`
+	ShortDescription string    `json:"short_description" binding:"required"`
+	Description      string    `json:"description" binding:"required"`
+	AgeCategory      string    `json:"age_category" binding:"required"`
+	Budget           int       `json:"budget" binding:"required"`
+	WorldwideFees    int       `json:"worldwide_fees" binding:"required"`
 	TrailerURL       *string   `json:"trailer_url,omitempty"`
 	Year             int       `json:"year" binding:"required"`
 	Rating           float64   `json:"rating,omitempty"`
@@ -34,30 +34,14 @@ type Film struct {
 
 func (f *Film) Sanitize() {
 	f.Title = html.EscapeString(f.Title)
-
+	f.Cover = html.EscapeString(f.Cover)
+	f.Poster = html.EscapeString(f.Poster)
+	f.ShortDescription = html.EscapeString(f.ShortDescription)
+	f.Description = html.EscapeString(f.Description)
+	f.AgeCategory = html.EscapeString(f.AgeCategory)
 	if f.OriginalTitle != nil {
 		sanitized := html.EscapeString(*f.OriginalTitle)
 		f.OriginalTitle = &sanitized
-	}
-	if f.Cover != nil {
-		sanitized := html.EscapeString(*f.Cover)
-		f.Cover = &sanitized
-	}
-	if f.Poster != nil {
-		sanitized := html.EscapeString(*f.Poster)
-		f.Poster = &sanitized
-	}
-	if f.ShortDescription != nil {
-		sanitized := html.EscapeString(*f.ShortDescription)
-		f.ShortDescription = &sanitized
-	}
-	if f.Description != nil {
-		sanitized := html.EscapeString(*f.Description)
-		f.Description = &sanitized
-	}
-	if f.AgeCategory != nil {
-		sanitized := html.EscapeString(*f.AgeCategory)
-		f.AgeCategory = &sanitized
 	}
 	if f.TrailerURL != nil {
 		sanitized := html.EscapeString(*f.TrailerURL)
